crates/store/dl_chunk_store/tests/snapshots/dataframe__schema_static_columns-2.snap
---
source: crates/store/dl_chunk_store/tests/dataframe.rs
expression: static_only
---
[
    "baz",
    "foo",
    "yak",
]
