crates/store/dl_chunk_store/tests/snapshots/dataframe__schema_static_columns-3.snap
---
source: crates/store/dl_chunk_store/tests/dataframe.rs
expression: non_static_only
---
[
    "example.MyPoints:points",
]
